Bump to Spring Boot 4