@@ -65,10 +65,10 @@ public class ProducerRunner {
         int i = 0;
         while (!stopped) {
             ProducerRecord<String, String> message =
-                    new ProducerRecord<>(STRING_TOPIC, String.valueOf(i), String.format("Message %s", i));
+                    new ProducerRecord<>(STRING_TOPIC, String.valueOf(i), "Message %s".formatted(i));
 
             message.headers().add("id", String.valueOf(i).getBytes(StandardCharsets.UTF_8));
-            message.headers().add("message", String.format("Message %s", i).getBytes(StandardCharsets.UTF_8));
+            message.headers().add("message", "Message %s".formatted(i).getBytes(StandardCharsets.UTF_8));
 
             producer.send(message, (recordMetadata, e) -> {
                 if (e != null) {
