@@ -38,7 +38,7 @@ import io.github.loicgreffier.streams.join.stream.stream.app.KafkaStreamsTopolog
 import io.github.loicgreffier.streams.join.stream.stream.serdes.SerdesUtils;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.time.Instant;
 import java.util.List;
 import java.util.Map;
@@ -113,7 +113,7 @@ class KafkaStreamsJoinStreamStreamApplicationTest {
     @AfterEach
     void tearDown() throws IOException {
         testDriver.close();
-        Files.deleteIfExists(Paths.get(STATE_DIR));
+        Files.deleteIfExists(Path.of(STATE_DIR));
         MockSchemaRegistry.dropScope(MOCK_SCHEMA_REGISTRY_URL);
     }
 
