@@ -36,7 +36,7 @@ import io.github.loicgreffier.streams.store.window.timestamped.app.KafkaStreamsT
 import io.github.loicgreffier.streams.store.window.timestamped.serdes.SerdesUtils;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.time.Instant;
 import java.util.Map;
 import java.util.Properties;
@@ -87,7 +87,7 @@ class KafkaStreamsStoreWindowTimestampedApplicationTest {
     @AfterEach
     void tearDown() throws IOException {
         testDriver.close();
-        Files.deleteIfExists(Paths.get(STATE_DIR));
+        Files.deleteIfExists(Path.of(STATE_DIR));
         MockSchemaRegistry.dropScope(MOCK_SCHEMA_REGISTRY_URL);
     }
 
